# digital-shop-backend

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: auth.py
app/core/: config.py  errors.py  exception.py  firebase_app.py  firestore_client.py  jwt.py  security.py
app/schemas/: auth.py  order.py  product.py  response.py  user.py
app/services/: firebase.py  firebase_auth.py
app/services/firestore/: order.py  product.py  user.py
tests/: test_firebase_clients.py
